--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
-    margin: 0;
-    font-family: "Roboto Mono", monospace;
-    text-align: left;
-    font-style: normal;
-    background-color: black;
-    color: #fff;
+  margin: 0;
+  font-family: "Roboto Mono", monospace;
+  text-align: left;
+  font-style: normal;
+  background-color: black;
+  color: #fff;
 }
 
 h1 {
@@ -13,46 +13,14 @@ h1 {
   font-weight: 300;
 }
 
-h2, h3 {
+h2,
+h3 {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   color: #98e8cd;
   font-size: 2.5rem;
 }
 
-/* NAVBAR */
-header {
-  position: relative;
-}
-
-.navbar {
-    margin: 0 auto;
-    background-color: #98e8cd;
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.navbar .toggle-btn {
-    color: black;
-    font-size: 2.5rem;
-    display: block;
-    cursor: pointer;
-    margin: 1rem 5rem;
-}
-
-.navbar-brand img{
-  margin: 3rem 5rem 1rem;
-  width: 5rem;
-  height: 5rem;
-  display: flex;
-}
-
-li {
- list-style: none;
-}
 a {
   text-decoration: none;
   color: #98e8cd;
@@ -60,13 +28,69 @@ a {
   cursor: pointer;
   transition: scale .2 ease;
 }
+
 a:hover {
   list-style: square;
   scale: 1.05;
 }
- a:active {
+
+a:active {
   scale: 0.95;
 }
+
+/* NAVBAR */
+header {
+  position: relative;
+}
+
+/* Initial navbar styles */
+.navbar {
+  margin: 0 auto;
+  background-color: #98e8cd;
+  width: 100%;
+  height: 10vh;
+  position: fixed;
+  display: flex;
+  top: 0;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 999;
+}
+
+.navbar .toggle-btn {
+  color: black;
+  font-size: 2.5rem;
+  display: block;
+  cursor: pointer;
+  margin: 1rem 5rem;
+}
+
+.nav-brand {
+  margin: 3rem 5rem 1rem;
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+}
+
+/* Hide all nav items after the first section, except the brand and toggle button */
+.hide-nav .dropdown-menu {
+  display: none;
+}
+
+.hide-nav .nav-brand,
+.hide-nav .toggle-btn {
+  display: block;
+}
+
+/* Toggle button styles */
+.nav-toggle-btn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
+
 
 /* DROPDOWN MENU */
 .dropdown-menu {
@@ -74,29 +98,32 @@ a:hover {
   right: 0;
   top: 4rem;
   height: 0;
-  width: 30%;
+  width: 100%;
   /* background: rgba(225, 225, 225, 0.1); */
   backdrop-filter: blur(5px);
   background-repeat: 10px;
   overflow: hidden;
   transition: height .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
+
 .dropdown-menu.open {
   height: 36rem;
 }
 
 .dropdown-menu li {
+  list-style: none;
   padding: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: right;
 }
 
-.top-container{
+.top-container {
   margin: 6rem;
   display: flex;
   align-items: center;
 }
+
 .intro h1 {
   font-size: 1.7rem;
 }
@@ -109,6 +136,7 @@ a:hover {
   float: left;
   color: #fff;
 }
+
 .name {
   color: #98e8cd;
 }
@@ -116,9 +144,9 @@ a:hover {
 .top-link {
   margin-top: 8rem;
   display: inline-block;
-  padding: 4px 30px; 
-  border: 1px solid #98e8cd; 
-  color: white; 
+  padding: 4px 30px;
+  border: 1px solid #98e8cd;
+  color: white;
   background-color: transparent;
   border-radius: 2rem;
   font-size: 1rem;
@@ -129,7 +157,8 @@ a:hover {
   margin: 0;
 }
 
-.about-section {
+/* ABOUT ME */
+#about {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
@@ -145,44 +174,54 @@ a:hover {
 
 .about-paragraph h2 {
   margin-bottom: 2rem;
-  color: #98e8cd; 
+  color: #98e8cd;
   font-size: 2.5rem;
 }
 
+/* CONTACT */
 footer {
   margin: 8rem 6rem 1rem;
 }
+
 #contact {
   display: flex;
   width: 70%;
   justify-content: space-between;
-  margin: 8rem 3rem 2rem 0;
-  
+  margin: 6rem 3rem 1rem 0;
+
 }
 
 #contact p {
   font-size: 1.5rem;
+  margin: 10px 0;
   color: #98e8cd;
 }
 
-#contact i {
-  font-size: 1.3rem;
-  margin: 20px 12px;
+.socials i {
+  font-size: 1.5rem;
+  margin: 15px 12px;
 }
 
-
-
-.email {
-  font-size: inherit;
-  padding: 6rem auto;
-}
-
-
-.email a{
+.email a {
   color: #fff;
-  font-size: inherit;
+  font-size: 1.2rem;
+  font-weight: 200;
   display: block;
   padding: 10px 0;
+}
+
+.email-address {
+  display: inline-block;
+  padding: 0;
+}
+
+.email-address a:hover {
+  text-decoration: underline #98e8cd;
+  scale: 1.05;
+}
+
+.email-address a:active {
+  scale: 0.6;
 }
 
 hr {
@@ -199,23 +238,73 @@ hr {
   font-size: 1.5rem;
 }
 
+
+#work-section {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  padding: 2rem;
+  margin: 8rem 5rem 0;
+  flex-wrap: wrap;
+}
+
+.work-heading {
+  text-align: center;
+  font-size: 3em;
+  margin-bottom: 30px;
+  width: 100%;
+}
+
+.work-container {
+  flex: 1;
+  text-align: center;
+  padding: 2rem;
+  background: rgb(152, 232, 205);
+  background: linear-gradient(0deg, rgba(152, 232, 205, 1) 0%, rgba(28, 43, 38, 1) 38%);
+}
+
+.project {
+  flex: 1;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.project-title {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.project-image {
+  max-width: 100%;
+  /* Makes sure images are responsive */
+  height: auto;
+  margin-bottom: 10px;
+}
+
+
+
 /* RESPONSIVENESS */
-@media(max-width: 992px){
+@media(max-width: 992px) {
+
   .navbar .links,
   .navbar .action-btn {
-      display: none;
+    display: none;
   }
+
   .navbar .toggle-btn {
     display: block;
   }
+
   .dropdown-menu {
-      display: block;
+    display: block;
   }
 
 }
-@media(max-width: 576px){
+
+@media(max-width: 576px) {
   .dropdown-menu {
-      left: 2rem;
-      width: unset;
+    left: 2rem;
+    width: unset;
   }
 }
